# mewo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/shaders/: out.frag.wgsl  out.vert.wgsl  out.wgsl  viewport.frag.wgsl
assets/shaders/snippets/: default_frag_prefix.txt  default_viewport_frag.txt
packaging/: README.txt.in
src/: aspect_ratio.cpp  aspect_ratio.hpp  assets.cpp  assets.hpp  editor.cpp  editor.hpp  exception.cpp  exception.hpp  fs.cpp  fs.hpp  gui.cpp  gui.hpp  main.cpp  mewo.cpp  mewo.hpp  out.cpp  out.hpp  query.hpp  state.hpp  utility.hpp  viewport.cpp  viewport.hpp
src/gfx/: compilation_diagnostic.hpp  create.cpp  create.hpp  error.hpp  frame_context.hpp  renderer.cpp  renderer.hpp
src/gui/: context.cpp  context.hpp  imconfig.h  layout.cpp  layout.hpp
src/sdl/: context.cpp  context.hpp  window.cpp  window.hpp
